# TTS-Project-Ilokano

./: Galiera Queen 1.txt  LICENSE  Nesami Ryce M. De la Cruz.m4a  Nicole Ilocano.m4a  README.md  TRIPULANTE (1).aac  audio 1 text.docx  setup.cfg  setup.py
data/: Jeff Ilokano Recording.m4a  Kurt Thesis.m4a  Nesami_Script.txt  Panangsapul iti Puraw a Kabalio 1 (1).txt  Panangsapul iti Puraw a Kabalio 1.txt  Sino Nga Ba Ang Nauna, Si Darna O Si Wonder Woman_.txt  Story 1 and Stor 2.txt  Venazir Martinez Ang Siningay Pagkakakilanlanng Ating Kultura At Pagkatao.txt  audio 1 text.docx.txt  bagyong gener.aac
src/: tts_processing.py
