name = TTS-Project-Ilokano
version = 0.1.0
author = Crystal
author_email = crystaljoyce226@gmail.com
url = https://github.com/crystalarizala/TTS-PROJECT-ILOKANO
license = MIT  
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    # List your dependencies here, e.g.:
    numpy
    requests
